White space mobile fix

--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,6 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+body, html {
+  overflow-x: hidden;
+}
